--- a/simpleComponents/certification/c-certification.scss
+++ b/simpleComponents/certification/c-certification.scss
@@ -28,7 +28,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    color: #ffffff;
   }
 
   &__title {
@@ -56,7 +55,7 @@
   &__download {
     font-size: 1.1rem;
     text-decoration: none;
-    color: #fff;
+    color: $text-light;
     cursor: pointer;
     margin-top: 10px;
     font-weight: 600;
